--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,7 +9,16 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.runner }}
+    strategy:
+      matrix:
+        include:
+          - arch: x86_64
+            runner: ubuntu-latest
+            target_cpu: "x64"
+          - arch: arm64
+            runner: ubuntu-latest-arm64
+            target_cpu: "arm64"
 
     steps:
       - name: Checkout repository
@@ -22,19 +31,19 @@ jobs:
         uses: actions/cache@v4
         with:
           path: angle
-          key: angle-source-${{ hashFiles('download.sh') }}-${{ github.sha }}
+          key: angle-source-${{ matrix.arch }}-${{ hashFiles('download.sh') }}-${{ github.sha }}
           restore-keys: |
-            angle-source-${{ hashFiles('download.sh') }}-
-            angle-source-
+            angle-source-${{ matrix.arch }}-${{ hashFiles('download.sh') }}-
+            angle-source-${{ matrix.arch }}-
 
       - name: Cache build artifacts
         uses: actions/cache@v4
         with:
           path: angle/out
-          key: angle-build-${{ hashFiles('build.sh') }}-${{ github.sha }}
+          key: angle-build-${{ matrix.arch }}-${{ hashFiles('build.sh') }}-${{ github.sha }}
           restore-keys: |
-            angle-build-${{ hashFiles('build.sh') }}-
-            angle-build-
+            angle-build-${{ matrix.arch }}-${{ hashFiles('build.sh') }}-
+            angle-build-${{ matrix.arch }}-
 
       - name: Download ANGLE
         run: |
@@ -45,13 +54,15 @@ jobs:
         run: |
           cd angle
           chmod +x ../build.sh
+          # Set target CPU architecture for the build
+          export TARGET_CPU=${{ matrix.target_cpu }}
           ../build.sh
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         id: upload-artifacts
         with:
-          name: angle-libraries-${{ github.run_number }}
+          name: angle-libraries-${{ matrix.arch }}-${{ github.run_number }}
           path: |
             angle/out/Release/libEGL.so*
             angle/out/Release/libGLESv2.so*
@@ -59,8 +70,35 @@ jobs:
             angle/out/Release/libvk_swiftshader.so*
           retention-days: 30
           compression-level: 6
-          
+
       - name: Output artifact info
         run: |
+          echo "Architecture: ${{ matrix.arch }}"
           echo "Artifact ID: ${{ steps.upload-artifacts.outputs.artifact-id }}"
           echo "Artifact URL: ${{ steps.upload-artifacts.outputs.artifact-url }}"
+
+  collect:
+    runs-on: ubuntu-latest
+    needs: build
+    if: always() && contains(needs.build.result, 'success')
+
+    steps:
+      - name: Download all artifacts
+        uses: actions/download-artifact@v4
+        with:
+          pattern: angle-libraries-*-${{ github.run_number }}
+          path: collected-artifacts
+          merge-multiple: true
+
+      - name: List collected artifacts
+        run: |
+          echo "Collected artifacts:"
+          find collected-artifacts -type f -name "*.so*" | sort
+
+      - name: Upload combined artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: angle-libraries-all-platforms-${{ github.run_number }}
+          path: collected-artifacts/
+          retention-days: 30
+          compression-level: 6
