Add step to free disk space in GitHub Actions workflow for improved resource management

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -39,6 +39,11 @@ jobs:
           retention-days: 1
           compression-level: 1
 
+      - name: Free Disk Space (Ubuntu)
+        uses: jlumbroso/free-disk-space@main
+        with:
+          tool-cache: true
+
   build:
     runs-on: ${{ matrix.runner }}
     needs: download
