--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,48 +8,8 @@ on:
     branches: [main]
 
 jobs:
-  download:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Install Depot Tools
-        uses: newkdev/setup-depot-tools@v1.0.1
-
-      - name: Cache ANGLE source
-        uses: actions/cache@v4
-        id: cache-angle
-        with:
-          path: angle
-          key: angle-source-${{ hashFiles('commit') }}
-
-      - name: Download ANGLE
-        if: steps.cache-angle.outputs.cache-hit != 'true'
-        run: |
-          mkdir angle
-          cd angle
-          fetch angle
-          git checkout $(cat ../commit)
-          gclient sync
-
-      - name: Upload ANGLE source as artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: angle-source
-          path: angle/
-          retention-days: 1
-          compression-level: 1
-
-      - name: Free Disk Space (Ubuntu)
-        uses: jlumbroso/free-disk-space@main
-        with:
-          tool-cache: true
-
   build:
     runs-on: ${{ matrix.runner }}
-    needs: download
     strategy:
       matrix:
         include:
@@ -67,17 +27,23 @@ jobs:
       - name: Install Depot Tools
         uses: newkdev/setup-depot-tools@v1.0.1
 
-      - name: Download ANGLE source artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: angle-source
-          path: angle/
-
-      - name: Cache build artifacts
+      - name: Cache ANGLE source and build artifacts
         uses: actions/cache@v4
+        id: cache-angle
         with:
-          path: out
-          key: angle-build-${{ matrix.arch }}-${{ hashFiles('commit') }}-${{ hashFiles('build.sh') }}
+          path: |
+            angle
+            out
+          key: angle-${{ matrix.arch }}-${{ hashFiles('commit') }}-${{ hashFiles('build.sh') }}
+
+      - name: Download ANGLE
+        if: steps.cache-angle.outputs.cache-hit != 'true'
+        run: |
+          mkdir -pv angle
+          cd angle
+          fetch angle
+          git checkout $(cat ../commit)
+          gclient sync
 
       - name: Build ANGLE
         run: |
