--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,7 +30,7 @@ jobs:
           path: |
             angle
             out
-          key: angle-${{ matrix.arch }}-${{ hashFiles('commit') }}-${{ hashFiles('build.sh') }}
+          key: angle-${{ matrix.platform }}-${{ hashFiles('commit') }}-${{ hashFiles('build.sh') }}
 
       - name: Download ANGLE
         if: steps.cache-angle.outputs.cache-hit != 'true'
@@ -69,7 +69,7 @@ jobs:
         uses: actions/upload-artifact@v4
         id: upload-artifacts
         with:
-          name: angle-libraries-${{ matrix.arch }}-${{ github.run_number }}
+          name: angle-libraries-${{ matrix.platform }}-${{ github.run_number }}
           path: |
             out/Release/libEGL.so*
             out/Release/libGLESv2.so*
@@ -80,7 +80,7 @@ jobs:
 
       - name: Output artifact info
         run: |
-          echo "Architecture: ${{ matrix.arch }}"
+          echo "Architecture: ${{ matrix.platform }}"
           echo "Artifact ID: ${{ steps.upload-artifacts.outputs.artifact-id }}"
           echo "Artifact URL: ${{ steps.upload-artifacts.outputs.artifact-url }}"
 
