Refactor ANGLE build workflow to streamline release artifact creation and improve artifact management

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,9 +3,14 @@ name: Download and Build ANGLE
 on:
   push:
     branches: [main]
+    tags:
+      - '*'
 
   pull_request:
     branches: [main]
+
+  release:
+    types: [published]
 
 jobs:
   build:
@@ -87,31 +92,30 @@ jobs:
           echo "Artifact ID: ${{ steps.upload-artifacts.outputs.artifact-id }}"
           echo "Artifact URL: ${{ steps.upload-artifacts.outputs.artifact-url }}"
 
+      - name: Create release archive
+        if: github.event_name == 'release'
+        run: |
+          # Read commit hash and get first 8 characters
+          COMMIT_HASH=$(cat commit | head -c 8)
+          echo "Using commit hash: $COMMIT_HASH"
+          
+          mkdir -p release-files
+          cp out/Release/libEGL.so* release-files/ 2>/dev/null || true
+          cp out/Release/libGLESv2.so* release-files/ 2>/dev/null || true
+          cp out/Release/libvulkan.so* release-files/ 2>/dev/null || true
+          cp out/Release/libvk_swiftshader.so* release-files/ 2>/dev/null || true
+          cd release-files
+          zip -r ../libangle-${{ matrix.arch }}-${COMMIT_HASH}.zip .
+          cd ..
+          ls -la libangle-${{ matrix.arch }}-${COMMIT_HASH}.zip
+          echo "COMMIT_HASH=${COMMIT_HASH}" >> $GITHUB_ENV
+
+      - name: Upload to release
+        if: github.event_name == 'release'
+        uses: softprops/action-gh-release@v1
+        with:
+          files: libangle-${{ matrix.arch }}-${{ env.COMMIT_HASH }}.zip
+          token: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Free Disk Space (Ubuntu)
         uses: jlumbroso/free-disk-space@main
-
-  collect:
-    runs-on: ubuntu-latest
-    needs: build
-    if: always() && contains(needs.build.result, 'success')
-
-    steps:
-      - name: Download all artifacts
-        uses: actions/download-artifact@v4
-        with:
-          pattern: angle-libraries-*-${{ github.run_number }}
-          path: collected-artifacts
-          merge-multiple: true
-
-      - name: List collected artifacts
-        run: |
-          echo "Collected artifacts:"
-          find collected-artifacts -type f -name "*.so*" | sort
-
-      - name: Upload combined artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: angle-libraries-all-platforms-${{ github.run_number }}
-          path: collected-artifacts/
-          retention-days: 30
-          compression-level: 6
