--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -69,10 +69,10 @@ jobs:
         with:
           name: angle-libraries-${{ matrix.arch }}-${{ github.run_number }}
           path: |
-            out/Release/libEGL.so*
-            out/Release/libGLESv2.so*
-            out/Release/libvk_swiftshader.so*
-            out/Release/libvulkan.so*
+            out/Release/libEGL.so
+            out/Release/libGLESv2.so
+            out/Release/libvk_swiftshader.so
+            out/Release/libvulkan.so.1
             out/Release/vk_swiftshader_icd.json
           retention-days: 30
           compression-level: 6
@@ -91,10 +91,10 @@ jobs:
           echo "Using commit hash: $COMMIT_HASH"
           
           mkdir -p release-files
-          cp out/Release/libEGL.so* release-files/ 2>/dev/null || true
-          cp out/Release/libGLESv2.so* release-files/ 2>/dev/null || true
-          cp out/Release/libvk_swiftshader.so* release-files/ 2>/dev/null || true
-          cp out/Release/libvulkan.so* release-files/ 2>/dev/null || true
+          cp out/Release/libEGL.so release-files/ 2>/dev/null || true
+          cp out/Release/libGLESv2.so release-files/ 2>/dev/null || true
+          cp out/Release/libvk_swiftshader.so release-files/ 2>/dev/null || true
+          cp out/Release/libvulkan.so.1 release-files/ 2>/dev/null || true
           cp out/Release/vk_swiftshader_icd.json release-files/ 2>/dev/null || true
           cd release-files
           zip -r ../libangle-${{ matrix.arch }}-${COMMIT_HASH}.zip .
