--- a/.github/workflows/angle.yaml
+++ b/.github/workflows/angle.yaml
@@ -6,11 +6,15 @@ env:
 on:
   push:
     branches: [main]
+    paths:
+      - '.github/workflows/angle.yaml'
     tags:
       - '*'
 
   pull_request:
     branches: [main]
+    paths:
+      - '.github/workflows/angle.yaml'
 
   workflow_dispatch:
     inputs:
