Add missing list command for artifact verification in Shader Minimizer workflow

--- a/.github/workflows/shader-minimizer.yaml
+++ b/.github/workflows/shader-minimizer.yaml
@@ -67,6 +67,7 @@ jobs:
             -p:PublishTrimmed=true \
             -o ./artifacts/${{ matrix.arch }}
 
+          ls shader-minifier/artifacts/${{ matrix.arch }}/
           cp shader-minifier/artifacts/${{ matrix.arch }}/ShaderMinifier shader-minifier-${{ matrix.arch }}
 
       - name: Upload artifacts
