--- a/.github/workflows/dawn.yaml
+++ b/.github/workflows/dawn.yaml
@@ -1,25 +1,25 @@
 name: Dawn
 
 env:
-  DAWN_VERSION: '615b5fd6606a4d2bed2dc13a95ea9f87b497dec4'
+  DAWN_VERSION: "615b5fd6606a4d2bed2dc13a95ea9f87b497dec4"
 
 on:
   push:
     branches: [main]
     paths:
-      - '.github/workflows/dawn.yaml'
+      - ".github/workflows/dawn.yaml"
     tags:
-      - '*'
+      - "*"
 
   pull_request:
     branches: [main]
     paths:
-      - '.github/workflows/dawn.yaml'
+      - ".github/workflows/dawn.yaml"
 
   workflow_dispatch:
     inputs:
       commit:
-        description: 'Dawn commit hash to build'
+        description: "Dawn commit hash to build"
         required: true
         type: string
 
@@ -32,7 +32,7 @@ jobs:
           - platform: linux/amd64
             arch: amd64
             target_cpu: "x64"
-          - platform: linux/arm64  
+          - platform: linux/arm64
             arch: arm64
             target_cpu: "arm64"
 
@@ -45,15 +45,15 @@ jobs:
           git clone https://dawn.googlesource.com/dawn
           cd dawn
           git checkout ${{ inputs.commit || env.DAWN_VERSION }}
-          
+
           # Apply patches for dependency fetching
           git checkout -f
           sed -i -e 's/required_submodules = \[$/required_submodules = \["third_party\/swiftshader",/g' tools/fetch_dawn_dependencies.py
           sed -i -e 's/capture_output=True)/capture_output=True, check=True)/g' tools/fetch_dawn_dependencies.py
-          
+
           # Download dependencies with shallow clone
           python3 tools/fetch_dawn_dependencies.py -s
-          
+
           # Revert patches
           git checkout -f
 
@@ -93,7 +93,6 @@ jobs:
           mkdir -p release-files
           cp dawn/out/Release/libwebgpu_dawn.so release-files/ 2>/dev/null || true
           cp dawn/out/Release/libvk_swiftshader.so release-files/ 2>/dev/null || true
-          cp dawn/out/Release/vk_swiftshader_icd.json release-files/ 2>/dev/null || true
           cd release-files
           zip -r ../libdawn-${{ matrix.arch }}-${COMMIT_HASH}.zip .
           cd ..
@@ -106,3 +105,10 @@ jobs:
         with:
           files: libdawn-${{ matrix.arch }}-${{ env.COMMIT_HASH }}.zip
           token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: List build output
+        run: |
+          echo "Listing dawn/out/Release directory:"
+          ls -la dawn/out/Release/
+          echo "Looking for library files:"
+          find dawn/out/Release -name "*.so*" -o -name "*.dylib*" -o -name "*.dll*"
