--- a/.github/workflows/angle.yaml
+++ b/.github/workflows/angle.yaml
@@ -25,16 +25,22 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         include:
           - platform: linux/amd64
             arch: amd64
             target_cpu: "x64"
+            os: ubuntu-latest
           - platform: linux/arm64
             arch: arm64
             target_cpu: "arm64"
+            os: ubuntu-latest
+          - platform: darwin/arm64
+            arch: osx-arm64
+            target_cpu: "arm64"
+            os: macos-14
 
     steps:
       - name: Checkout repository
