--- a/.github/workflows/angle.yaml
+++ b/.github/workflows/angle.yaml
@@ -114,5 +114,9 @@ jobs:
         if: github.event_name == 'workflow_dispatch'
         uses: softprops/action-gh-release@v1
         with:
+          tag_name: "manual-angle-${{ env.COMMIT_HASH }}"
+          name: "Angle Manual Build ${{ env.COMMIT_HASH }}"
           files: libangle-${{ matrix.arch }}-${{ env.COMMIT_HASH }}.zip
           token: ${{ secrets.GITHUB_TOKEN }}
+          draft: false
+          prerelease: true
