--- a/.github/workflows/dawn.yaml
+++ b/.github/workflows/dawn.yaml
@@ -106,5 +106,9 @@ jobs:
         if: github.event_name == 'workflow_dispatch'
         uses: softprops/action-gh-release@v1
         with:
+          tag_name: "manual-dawn-${{ env.COMMIT_HASH }}"
+          name: "Dawn Manual Build ${{ env.COMMIT_HASH }}"
           files: libdawn-${{ matrix.arch }}-${{ env.COMMIT_HASH }}.zip
           token: ${{ secrets.GITHUB_TOKEN }}
+          draft: false
+          prerelease: true
