Update OS configurations for Dawn and Shader Minimizer workflows: change to ubuntu-24.04-arm and macos-latest

--- a/.github/workflows/angle.yaml
+++ b/.github/workflows/angle.yaml
@@ -36,7 +36,7 @@ jobs:
           - platform: linux/arm64
             arch: arm64
             target_cpu: "arm64"
-            os: ubuntu-latest
+            os: ubuntu-24.04-arm
           - platform: darwin/arm64
             arch: osx-arm64
             target_cpu: "arm64"
