--- a/.github/workflows/dawn.yaml
+++ b/.github/workflows/dawn.yaml
@@ -36,11 +36,11 @@ jobs:
           - platform: linux/arm64
             arch: arm64
             target_cpu: "arm64"
-            os: ubuntu-latest
+            os: ubuntu-24.04-arm
           - platform: darwin/arm64
             arch: osx-arm64
             target_cpu: "arm64"
-            os: macos-14
+            os: macos-latest
 
     steps:
       - name: Checkout repository
