--- a/.github/workflows/shader-minimizer.yaml
+++ b/.github/workflows/shader-minimizer.yaml
@@ -32,9 +32,9 @@ jobs:
           - arch: linux-x64
             os: ubuntu-latest
           - arch: linux-arm64
-            os: ubuntu-latest
+            os: ubuntu-24.04-arm
           - arch: osx-arm64
-            os: macos-14
+            os: macos-latest
 
     steps:
       - name: Checkout repository
