--- a/.github/workflows/angle.yaml
+++ b/.github/workflows/angle.yaml
@@ -33,17 +33,17 @@ jobs:
       matrix:
         include:
           - platform: linux/amd64
-            arch: amd64
+            arch: linux-x64
             target_cpu: "x64"
             os: ubuntu-latest
           - platform: linux/arm64
-            arch: arm64
+            arch: linux-arm64
             target_cpu: "arm64"
             os: ubuntu-24.04-arm
           - platform: darwin/arm64
             arch: osx-arm64
             target_cpu: "arm64"
-            os: macos-14
+            os: macos-latest
 
     steps:
       - name: Checkout repository
@@ -117,8 +117,8 @@ jobs:
         if: github.event_name == 'workflow_dispatch'
         uses: softprops/action-gh-release@v1
         with:
-          tag_name: "manual-angle-${{ env.COMMIT_HASH }}"
-          name: "Angle Manual Build ${{ env.COMMIT_HASH }}"
+          tag_name: "angle-${{ env.COMMIT_HASH }}"
+          name: "Angle Build ${{ env.COMMIT_HASH }}"
           files: libangle-${{ matrix.arch }}-${{ env.COMMIT_HASH }}.zip
           token: ${{ secrets.GITHUB_TOKEN }}
           draft: false
