--- a/.github/workflows/angle.yaml
+++ b/.github/workflows/angle.yaml
@@ -39,7 +39,7 @@ jobs:
           - platform: linux/arm64
             arch: linux-arm64
             target_cpu: "arm64"
-            os: ubuntu-24.04-arm
+            os: ubuntu-latest
           - platform: darwin/arm64
             arch: osx-arm64
             target_cpu: "arm64"
