--- a/.github/workflows/shader-minimizer.yaml
+++ b/.github/workflows/shader-minimizer.yaml
@@ -33,11 +33,11 @@ jobs:
       matrix:
         include:
           - arch: linux-x64
-            os: ubuntu-latest
+            os: ubuntu-24.04
           - arch: linux-arm64
             os: ubuntu-24.04-arm
           - arch: osx-arm64
-            os: macos-latest
+            os: macos-15
 
     steps:
       - name: Checkout repository
