Add step to free disk space in Ubuntu workflow

--- a/.github/workflows/angle.yaml
+++ b/.github/workflows/angle.yaml
@@ -52,6 +52,9 @@ jobs:
       - name: Install Depot Tools
         uses: newkdev/setup-depot-tools@v1.0.1
 
+      - name: Free Disk Space (Ubuntu)
+        uses: jlumbroso/free-disk-space@main
+
       - name: Download
         run: |
           mkdir -pv angle
