fix do not clean in mac

--- a/.github/workflows/angle.yaml
+++ b/.github/workflows/angle.yaml
@@ -53,6 +53,7 @@ jobs:
         uses: newkdev/setup-depot-tools@v1.0.1
 
       - name: Free Disk Space (Ubuntu)
+        if: runner.os == 'Linux'
         uses: jlumbroso/free-disk-space@main
 
       - name: Download
